--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "knex": "^2.5.1",
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.1"
   }
 }
